--- a/src/views/partials/header.ejs
+++ b/src/views/partials/header.ejs
@@ -4,8 +4,9 @@
             <div class="mobile_logo">
                 <a href="/"><img src="/images/logo.png" alt="logo"></a>
             </div>
-            <div class="nav_mobile_menu">
-                <span id="btnMenu"><i class="fas fa-bars"></i></span>
+            <div class="nav_mobile_menu" id="btnMenu">
+                <span class="navBurger" id="burger"><i class="fas fa-bars"></i></span>
+                <span class="navClose"><i class="fas fa-times"></i></span>
             </div>
         </div>
         <div class="options_mobile" id="menu">
@@ -50,8 +51,9 @@
             <div class="nav_options-emergente">
                 <% if (locals.userLogin && userLogin.rol=="admin" ) { %>
                     <a href="/products/add" title="Añadir producto"><i class="fa-solid fa-plus"></i></a>
+                    <a href="/products/list/0"><i class="fas fa-user-cog"
+                            title="Configuraciones de Administrador"></i></a>
                     <% } %>
-                        <a href="#"><i class="fa-solid fa-gear" title="Configuración"></i></a>
                         <a href="#"><i class="fa-solid fa-bell" title="Notificaciones"></i></a>
                         <a href="/products/cart"><i class="fa-solid fa-cart-shopping"
                                 title="Carrito de compras"></i></a>
@@ -97,24 +99,24 @@
                 <div class="header__opciones">
                     <ul>
                         <li><a href="/">Home</a></li>
-                        <% if (locals.userLogin && userLogin.rol=="admin" ) { %>
-                            <li><a href="/products/list/0">Lista</a></li>
-                            <% }else{ %>
-                                <li><a href="/products/all">Productos</a></li>
-                                <% }%>
-                                    <li><a href="">Quiénes somos</a></li>
-                                    <li><a href="">Contacto</a></li>
+                        <li><a href="/products/all">Productos</a></li>
+                        <li><a href="">Quiénes somos</a></li>
+                        <li><a href="">Contacto</a></li>
                     </ul>
                 </div>
                 <div class="header__iconos">
-                    <% if (locals.userLogin && userLogin.rol=="admin" ) { %>
-                        <a href="/products/add" title="Añadir producto"><i class="fa-solid fa-plus"></i></a>
-                        <% } %>
-                            <a href="#"><i class="fa-solid fa-gear" title="Configuración"></i></a>
-                            <a href="#"><i class="fa-solid fa-bell" title="Notificaciones"></i></a>
-                            <a href="/products/cart"><i class="fa-solid fa-cart-shopping"
-                                    title="Carrito de compras"></i></a>
-                            <a href="#"><i class="fa-regular fa-heart" title="Favoritos"></i></a>
+                    <% if (locals.userLogin) { %>
+                        <% if (locals.userLogin && userLogin.rol=="admin" ) { %>
+                            <a href="/products/add" title="Añadir producto"><i class="fa-solid fa-plus"></i></a>
+                            <a href="/products/list/0"><i class="fas fa-user-cog"
+                                    title="Configuraciones de Administrador"></i></a>
+                            <% } %>
+                                <% } %>
+                                <a href="#"><i class="fa-solid fa-bell" title="Notificaciones"></i></a>
+                                <a href="/products/cart"><i class="fa-solid fa-cart-shopping"
+                                        title="Carrito de compras"></i></a>
+                                <a href="#"><i class="fa-regular fa-heart" title="Favoritos"></i></a>
+
                 </div>
             </nav>
 </header>
