--- a/public/css/all.css
+++ b/public/css/all.css
@@ -1,30 +1,74 @@
-.productAll main{
+
+.productAll main {
     margin: auto;
 }
 
 .productAll .primer_contenedor {
-    padding: 30px;
     border: 1px solid var(--verdeFuerte);
-    margin: 20px 30px 20px 30px;
+    margin: 70px 30px;
     border-radius: 20px;
     box-shadow: 2px 2px 5px 5px var(--aquamarine);
 }
 
 
 /* PRODUCTOS RELACIONADOS */
+/*Nombres categorías*/
 .productAll .titulares {
     text-align: center;
     color: white;
-    background-color:#7FA794C4;
-    margin: 30px 0;
+    background-color: #7FA794C4;
     height: 80px;
     display: flex;
     justify-content: center;
     align-items: center;
     font-size: 32px;
     border-radius: 20px;
-  
+    margin-bottom: 20px;
+    padding: 10px;
+    align-items: center;
+    margin: inherit;
 }
+
+.productAll #capilar{
+    color:  #306C25;
+}
+
+.productAll #corporal{
+    color: var(--azulSuave);
+}
+
+.productAll #spa{
+    color: var(--lila)
+}
+
+.productAll .container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+    object-fit: cover;
+    flex-direction: column;
+    margin: 50px 0px;
+}
+
+.productAll .overlay {
+	position: absolute;
+	top: 0;
+	left: 0;
+    width: 100%;
+    height: 200px;
+    background-size: cover;
+    z-index: -1;
+    overflow: hidden;
+    border-radius: 20px;
+}
+
+.productAll .overlay img {
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+}
+
 /* PRODUCTOS RELACIONADOS */
 .productAll .row {
     width: 100%;
@@ -34,6 +78,7 @@
     justify-content: center;
     align-items: center;
     gap: 3px;
+    margin-top: 75px;
 }
 
 .productAll .productosRelacionados {
@@ -59,6 +104,7 @@
     justify-content: center;
     border-radius: 8px;
     border: solid 1px white;
+    flex-wrap: nowrap;
 }
 
 .productAll .producto-iconos a:hover {
@@ -70,6 +116,35 @@
 .productAll .card.estilo-c {
     width: 250px;
     margin-bottom: 40px;
+}
+.productAll .add_product_cart{
+    display: inline-flex;
+    gap: 15px;
+    background-color: var(--verdeClaro-Opaco);
+    margin-right: 10px;
+    height: 40px;
+    width: 45px;
+    align-items: center;
+    justify-content: center;
+    border-radius: 8px;
+    border: solid 1px white;
+    color:white;
+    text-shadow: 0 0 2px black;
+    font-size: 20px;
+}
+
+.productAll .icons__hover:hover {
+    color: var(--verdeFuerte);
+    background-color: white;
+    border: 1px solid var(--verdeFuerte);
+}
+
+.cart_barra {
+    display: none;
+    position: absolute;
+    font-size: 24px;
+    margin-top: -23px;
+    margin-left: -4px;
 }
 
 
@@ -87,7 +162,7 @@
 
 .productAll .estilo-c .img-container {
     overflow: hidden;
-    height: 250px;
+    height: 200px;
     position: relative;
     border-top-left-radius: 10px;
     border-top-right-radius: 10px;
@@ -96,26 +171,22 @@
 .productAll .estilo-c .img-container img {
     width: 100%;
     position: absolute;
-    transition: all 0.5s;
+    transition: all 0.9s;
     height: 100%;
     object-fit: cover;
 }
 
 .productAll .estilo-c:hover .img-container img {
-    transform: scale(1.2);
+    transform: scale(1.09);
 }
 
 .productAll .estilo-c .info-container {
     border-bottom-left-radius: 10px;
     border-bottom-right-radius: 10px;
-    background-color: var(--green-background-cards);
-    /* height: 170px; */
+    background-image: linear-gradient(to bottom, #d5ecd4, #c9ebca, #bdeac1, #afe8b8, #a1e7af, #98e1ab, #8fdca6, #86d6a2, #83caa0, #81bf9d, #80b399, #7fa794);
     padding: 10px;
     text-align: center;
-    /* display: flex; */
-    /* flex-wrap: nowrap; */
-    /* justify-content: space-evenly; */
-    color: var(--azulSuave);
+    color: var(--VioletaOscuro);
 }
 
 .productAll .card {
@@ -134,13 +205,19 @@
     color: var(--azulSuave);
 }
 
+.productAll .estilo-c .info-container .name:hover {
+   background-color:rgba(255, 255, 255, 0.562);
+   border-radius: 40%;
+}
+
 /*PRECIO PRODUCTO */
 .productAll .estilo-c .info-container p {
     font-size: 24px;
     margin: 5px 0px;
-    background-color: var(--aquamarineSuave);
+    background-color: #B4DCB18F;
     padding: 2px;
     color: var(--azulSuave);
+    border-radius: 50%;
 }
 
 /*CATEGORÍA PRODUCTO*/
@@ -164,6 +241,7 @@
     border: 1px solid white;
     border-radius: 25px;
 }
+
 @media(min-width: 460px) {
     .productAll .row {
         width: 100%;
@@ -203,8 +281,13 @@
         font-size: 15px;
     }
 
+    .productAll .estilo-c {
+        transition: transform .3s ease;
+    }
+
     .productAll .estilo-c:hover {
-        box-shadow: 0 0 8px black;
+        box-shadow: 0 0 8px aquamarine;
+        transform: translateY(-10px);
     }
 }
 
@@ -226,9 +309,113 @@
         font-size: 15px;
     }
 
-    .productAll .iconos-eco {
-        width: 97%;
+    .productAll .titulares {
+        text-align: center;
+        color: white;
+        background-color: #7FA794C4;
+        height: 80px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        font-size: 32px;
+        border-radius: 20px;
+        margin-bottom: 20px;
+        padding: 10px;
     }
+    
+    .productAll .content p{
+        text-align: center;
+        padding-top: 10px;
+        font-size: 14px;
+    }
+    
+    .productAll #capilar{
+        color:  #306C25;
+    }
+    
+    .productAll #corporal{
+        color: var(--azulSuave);
+    }
+    
+    .productAll #spa{
+        color: var(--lila)
+    }
+    
+    .productAll .container {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        position: relative;
+        object-fit: cover;
+        flex-direction: column;
+        height: 400px;
+        margin: 50px 0px;
+    }
+    
+    .productAll .overlay {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 400px;
+        background-size: cover;
+        -webkit-filter: blur(25px);
+        backdrop-filter: blur(25px);
+        z-index: -1;
+        overflow:hidden;
+    }
+    
+    .productAll .box {
+        width: 90%;
+        display: flex;
+        height: 200px;
+        transform:translatex(60px)
+    }
+    
+    .productAll .content {
+        width: calc(50% - 90px);
+        background-color: white;
+        line-height: 1.4;
+        padding: 10px;
+        border-top-left-radius: 5%;
+        border-bottom-left-radius: 5%;
+    }
+    
+    .productAll .content h3 {
+        margin-bottom: 5px;
+    }
+    
+    .productAll .image {
+        width: 50%;
+        border-bottom: 200px solid transparent;
+        border-left: 60px solid white;
+    }
+    
+    .productAll .image img {
+        width: 100%;
+        height: 200px;
+        position: relative;
+        z-index: -1;
+        transform: translateX(-60px);
+        border-top-right-radius: 5%;
+        border-bottom-right-radius: 5%;
+        object-fit: cover;
+    }
+    
+
+@media (min-width: 960px) {
+
+    .productAll .content p{
+        padding-top: 20px;
+        font-size: 18px;
+    }
+
+    .productAll .image img {
+        object-position: top;
+        }
+
+    }
+
 }
 
 
