--- a/src/views/products/list.ejs
+++ b/src/views/products/list.ejs
@@ -12,11 +12,11 @@
                         <div class="list__cates">
                             <div class="list__cates1">
                                 <a class="list__cate" href="/products/list/0">TODOS</a>
-                                <a class="list__cate" href="/products/list/<%= bioCapilar.products%> ">BioCapilar</a>
+                                <a class="list__cate" href="/products/list/1">BioCapilar</a>
                             </div>
                             <div class="list__cates2">
-                                <a class="list__cate" href="/products/list/<%= bioCorporal.products%>  ">BioCorporal</a>
-                                <a class="list__cate" href="/products/list/<%= bioSpa.products %> ">BioSpa</a>
+                                <a class="list__cate" href="/products/list/2">BioCorporal</a>
+                                <a class="list__cate" href="/products/list/3">BioSpa</a>
                             </div>
 
                         </div>
@@ -32,7 +32,7 @@
                         <h3 class="list__options">Opciones</h3>
                     </div>
                     <section class="list__products">
-                        <% (products).forEach((product)=> { %>
+                        <% products.forEach((product)=> { %>
                             <article class="list__product">
                                 <a class="list__id" href="/products/card/<%= product.id %>">
                                     <%= product.id %>
@@ -43,9 +43,9 @@
                                 <h4 class="list__price">$<%= product.price %>
                                 </h4>
                                 <div class="list__options">
-                                    <form method="POST" action="/products/remove/<%= product.id %>?_method=DELETE">
-                                        <button class="list__delete" type="submit" title="Eliminar producto"><i
-                                                class="fa-solid fa-trash-can"></i></button>
+                                    <form method="POST" action="/products/remove/<%= product.id %>?_method=DELETE" id="eliminar-producto">
+                                        <button class="list__delete" type="submit" title="Eliminar producto" onclick="return confirmDelete()">
+                                        <i class="fa-solid fa-trash-can"></i></button>
                                     </form>
                                     <a href="/products/edit/<%= product.id %>" class="list__edit"
                                         title="Editar producto"><i class="fa-solid fa-pen"></i></a>
@@ -57,15 +57,8 @@
 
                 </div>
             </main>
-
-
-
-
-
-
             <%- include('../partials/footer') %>
-                <script src="/javascript/menuMobile.js"></script>
-                <script src="/javascript/navEmergent.js"></script>
+            <script src="/javascript/deteleProduct.js"></script>
     </body>
 
 </html>
