--- a/src/views/users/editProfile.ejs
+++ b/src/views/users/editProfile.ejs
@@ -6,8 +6,40 @@
     <body class="editProfile">
         <%- include('../partials/header') %>
             <main>
+                <div class="popup" id="popup">
+
+                    <form action="/users/updatepass/<%= user.id %>?_method=PUT" method="POST" class="popup-container" id="form-popup">
+                        <div class="contain-pop-top">
+                            <i class="fas fa-times" id="btn-close-popup"></i>
+                        </div>
+                        <div class="popup-dats">
+                            <div class="popup-box">
+                                <label for="">Antigua contraseña</label>
+                                <input class="input-pop" type="password" id="OldPassword" name="OldPassword">
+                                <i class="fas fa-eye" id="eye1"></i>
+                            </div>
+                            <span id="errorOldPassword" class="register_alert" style="text-align:center;"></span>
+                            <div class="popup-box">
+                                <label for="">Nueva contraseña</label>
+                                <input class="input-pop" type="password" id="Newpassword" name="Newpassword">
+                                <i class="fas fa-eye" id="eye2"></i>
+                            </div>
+                            <span id="errorNewpassword" class="register_alert"></span>
+                            <div class="popup-box">
+                                <label for="">Repetir nueva contraseña</label>
+                                <input class="input-pop" type="password" id="Newpassword2" name="Newpassword2">
+                                <i class="fas fa-eye" id="eye3"></i>
+                            </div>
+                            <span id="errorNewpassword2" class="register_alert"></span>
+                            <div class="popup-box">
+                                <span class="register_alert" id="errorSubmit"></span>
+                                <button type="submit" class="change-pass">Guardar Cambios</button>
+                            </div>
+                        </div>
+                    </form>
+                </div>
                 <form action="/users/profile/edit/update/<%= user.id %>?_method=PUT" method="POST"
-                    enctype="multipart/form-data">
+                    enctype="multipart/form-data" id="edit-form">
                     <section class="edit_user__container">
                         <div class="edit_user__head">
                             <div class="edit_user__img">
@@ -16,7 +48,7 @@
                                 <input type="file" accept="image/*" id="image" name="image">
                             </div>
                             <div class="edit_user__options">
-                                <button type="submit">Guardar Cambios</button>
+                                <button type="submit" id="btn-save-edit">Guardar Cambios</button>
                             </div>
                         </div>
                         <div class="edit_user__dats">
@@ -26,9 +58,9 @@
                                     <label for="">Nombre:</label>
                                     <input type="text"
                                         value="<%= locals.errores && errores.firstname ? old.firstname : user.firstname %>"
-                                        name="firstname" id="firstname">
+                                        name="firstname" id="firstname" class="Edit-input">
                                 </div>
-                                <span class="register_alert" style="width: auto;margin: auto;">
+                                <span class="register_alert" style="width: auto;margin: auto;" id="errorFirstname">
                                     <%= locals.errores && errores.firstname ? errores.firstname.msg : null %>
                                 </span>
                             </div>
@@ -37,9 +69,9 @@
                                     <label for="">Apellido:</label>
                                     <input type="text"
                                         value="<%= locals.errores && errores.lastname ? old.lastname : user.lastname %>"
-                                        name="lastname" id="lastname">
+                                        name="lastname" id="lastname" class="Edit-input">
                                 </div>
-                                <span class="register_alert" style="width: auto;margin: auto;">
+                                <span class="register_alert" style="width: auto;margin: auto;" id="errorLastname">
                                     <%= locals.errores && errores.lastname ? errores.lastname.msg : null %>
                                 </span>
                             </div>
@@ -48,27 +80,39 @@
                                     <label for="">Usuario:</label>
                                     <input type="text"
                                         value="<%= locals.errores && errores.username ? old.username : user.username %>"
-                                        name="username" id="username">
+                                        name="username" id="username" class="Edit-input">
                                 </div>
-                                <span class="register_alert" style="width: auto;margin: auto;">
+                                <span class="register_alert" style="width: auto;margin: auto;" id="errorUsername">
                                     <%= locals.errores && errores.username ? errores.username.msg : null %>
                                 </span>
                             </div>
                             <div class="edit_user__info-container">
                                 <label for="">Email:</label>
-                                <input type="text" value="<%= user.email %>" disabled name="email" id="email">
+                                <input type="text" value="<%= user.email %>" disabled name="email" id="email" class="Edit-input">
+                            </div>
+                            <div class="edit_user__options">
+
                             </div>
                             <div class="edit_user__info-container">
                                 <label for="">Rol:</label>
-                                <span><%= user.rol.name %></span>
+                                <span>
+                                    <%= user.rol.name %>
+                                </span>
+                            </div>
+                            <div class="errorDats">
+                                <span class="register_alert" id="errorSubmitDats"></span>
+                            </div>
+                            <div class="edit_user__info-container">
+                                <span class="change-pass" id="btn-change-pass">Cambiar contraseña</span>
                             </div>
                         </div>
                     </section>
                 </form>
+
+
             </main>
+            <%- include('../partials/footer') %>
+                <script src="/javascript/editProfile.js"></script>
     </body>
-    <%- include('../partials/footer') %>
-        <script src="/javascript/menuMobile.js"></script>
-        <script src="/javascript/navEmergent.js"></script>
 
 </html>
