--- a/site_ViveBio/src/views/partials/header.ejs
+++ b/site_ViveBio/src/views/partials/header.ejs
@@ -31,7 +31,7 @@
                     <% } %>
                         <ul class="menu">
                             <li><a href="/">Home</a></li>
-                            <% if (locals.userLogin && userLogin.rol=="admin" ) { %>
+                            <% if (locals.userLogin && (userLogin.rol=="admin" || userLogin.rol == "moderator") ) { %>
                                 <li><a href="/products/list/0">lista</a></li>
                                 <% }else{ %>
                                     <li><a href="/products/all">Productos</a></li>
@@ -49,7 +49,7 @@
                 <span class="solapa2" id="solapa2"></span>
             </div>
             <div class="nav_options-emergente">
-                <% if (locals.userLogin && userLogin.rol=="admin" ) { %>
+                <% if (locals.userLogin && (userLogin.rol=="admin" || userLogin.rol == "moderator") ) { %>
                     <a href="/products/add" title="Añadir producto"><i class="fa-solid fa-plus"></i></a>
                     <a href="/products/list/0"><i class="fas fa-user-cog"
                             title="Configuraciones de Administrador"></i></a>
@@ -106,7 +106,7 @@
                 </div>
                 <div class="header__iconos">
                     <% if (locals.userLogin) { %>
-                        <% if (locals.userLogin && userLogin.rol=="admin" ) { %>
+                        <% if (locals.userLogin && (userLogin.rol=="admin" || userLogin.rol=="moderator") ) { %>
                             <a href="/products/add" title="Añadir producto"><i class="fa-solid fa-plus"></i></a>
                             <a href="/products/list/0"><i class="fas fa-user-cog"
                                     title="Configuraciones de Administrador"></i></a>
