eliminacion de console.log en list

--- a/site_ViveBio/src/views/products/list.ejs
+++ b/site_ViveBio/src/views/products/list.ejs
@@ -8,7 +8,7 @@
             <main class="list">
                 <% if (userLogin.rol == "moderator") { %>
                     <div class="select__list">
-                        <select onchange="cambio()">
+                        <select>
                             <option class="products__list" value="1" default>Productos</option>
                             <option class="users__list" value="2">Usuarios</option>
                             <option class="categories__list" value="3">categorias</option>
