--- a/site_ViveBio/src/views/index.ejs
+++ b/site_ViveBio/src/views/index.ejs
@@ -27,7 +27,7 @@
                         <div class="img_3"></div>
                     </div>
                     <div class="slide">
-                        <p>ViveBio es una opción sustentable para quienes eligen consumir con amor y consciencia.</p>
+                        <p>ViveBio invita a que vivamos libres de químicos dañinos; nuestros procesos productivos nacen desde la consciencia y el respeto.</p>
                         <div class="img_4"></div>
                     </div>
                     <!-- fin de imagenes de carrusel -->
